# stochastic-single-electronics

./: .gitignore  pyproject.toml
.githooks/: pre-commit
docs/: compiler_design.md  devices_design.md  solvers_design.md  sse_core.devices.base.html  sse_core.devices.html  sse_core.devices.mapping.html  sse_core.devices.passive.html  sse_core.devices.semiconductor.html  sse_core.html
examples/inverter/: Inverter.ipynb
examples/pbit/: biased.ipynb  pbit.ipynb  unbiased.ipynb
src/sse_core/: __init__.py
src/sse_core/compiler/: builder.py  linter.py  models.py  parser.py  units.py
src/sse_core/devices/: base.py  mapping.py  passive.py  semiconductor.py
src/sse_core/solvers/: export.py  export_cli.py  gillespie.py  verification.py
tests/test_compiler/: test_builder.py  test_linter.py  test_parser.py
tests/test_devices/: test_physics.py  test_sweeps.py
tests/test_solvers/: test_export.py  test_export_cli.py  test_gillespie.py  test_regression_inverter.py  test_regression_pbit.py  test_verification.py
