[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sse-core"
version = "1.0.0"
description = "A high-performance Stochastic Single Electronics circuit simulator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",             # Low-overhead compilation accelerator
    "pyyaml>=6.0",              # YAML Config reader
    "pydantic>=2.0",            # Rigid schema parsing and data validation
    "scipy>=1.10.0",            # Sparse matrix linear algebra routines
    "h5py>=3.8.0",              # High-performance binary HDF5 I/O streaming
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",              # Unit and integration test runner
    "pytest-cov>=4.0",          # Code coverage reporter
    "ruff>=0.1.0",              # Lightning-fast Python linter and formatter
    "mypy>=1.5.0",              # Strict static type checker
    "types-PyYAML>=6.0",        # Type stubs for YAML
]